Se genera actualización dirección sitio y detalle de los perfiles

--- a/web/templates/carrera/lista_docentes.html
+++ b/web/templates/carrera/lista_docentes.html
@@ -55,12 +55,15 @@
                                           {% for docente in docentes %}
                                           <div class="cell-xs-8 cell-sm-7 cell-md-4 offset-top-41 offset-md-top-0">
                                               <figure class="thumbnail-josip thumbnail-spacing">
-                                                  <a href="#"><img width="270" height="270" src="{{ docente.foto.url }}" alt=""/></a>
-                                                  <div class="thumbnail-desc">
-                                                      <h5 class="thumbnail-josip-title text-bold text-white">{{ docente.nombre_completo }}</h5>
+                                                  <a href="detalle_academico?detalle={{docente.id}}"><img width="270" height="270" src="{{ docente.foto.url }}" alt=""/></a>
+                                                  <div class="thumbnail-desc" style="padding: 10px; text-align:center">
+                                                      <h6 class="thumbnail-josip-title text-bold text-white" style="margin: 0px;">{{ docente.nombres }}</h6>
+                                                      <h6 class="thumbnail-josip-title text-bold text-white" style="margin: 0px;">{{ docente.apellido_paterno }}</h6>
                                                   </div>
                                                   <figcaption>
-                                                      <a href="#" class="btn btn-block btn-rect text-md-left btn-java">Perfil completo</a>
+                                                      <a href="detalle_academico?detalle={{docente.id}}" class="btn btn-block btn-rect text-md-left btn-java" style="text-align:center">Perfil completo</a>
+                                                      <!-- a href="{ % url 'views' %}?office=foobar" -->
+                                                        <!--https://stackoverflow.com/questions/25345392/how-to-add-url-parameters-to-django-template-url-tag-->
                                                   </figcaption>
                                               </figure>
                                           </div>
@@ -77,12 +80,13 @@
                                           {% for endodoncia in endodoncias %}
                                           <div class="cell-xs-8 cell-sm-7 cell-md-4 offset-top-41 offset-md-top-0">
                                               <figure class="thumbnail-josip thumbnail-spacing">
-                                                  <a href="#"><img width="270" height="270" src="{{ endodoncia.foto.url }}" alt=""/></a>
-                                                  <div class="thumbnail-desc">
-                                                      <h5 class="thumbnail-josip-title text-bold text-white">{{ endodoncia.nombre_completo }}</h5>
+                                                  <a href="detalle_academico?detalle={{endodoncia.id}}"><img width="270" height="270" src="{{ endodoncia.foto.url }}" alt=""/></a>
+                                                  <div class="thumbnail-desc" style="padding: 10px; text-align:center">
+                                                      <h6 class="thumbnail-josip-title text-bold text-white" style="margin: 0px;">{{ endodoncia.nombres }}</h6>
+                                                      <h6 class="thumbnail-josip-title text-bold text-white" style="margin: 0px;">{{ endodoncia.apellido_paterno }}</h6>
                                                   </div>
                                                   <figcaption>
-                                                      <a href="#" class="btn btn-block btn-rect text-md-left btn-java">Perfil completo</a>
+                                                      <a href="detalle_academico?detalle={{endodoncia.id}}" class="btn btn-block btn-rect text-md-left btn-java" style="text-align:center">Perfil completo</a>
                                                   </figcaption>
                                               </figure>
                                           </div>
@@ -99,12 +103,13 @@
                                           {% for odontopediatria in odontopediatrias %}
                                           <div class="cell-xs-8 cell-sm-7 cell-md-4 offset-top-41 offset-md-top-0">
                                               <figure class="thumbnail-josip thumbnail-spacing">
-                                                  <a href="#"><img width="270" height="270" src="{{ odontopediatria.foto.url }}" alt=""/></a>
-                                                  <div class="thumbnail-desc">
-                                                      <h5 class="thumbnail-josip-title text-bold text-white">{{ odontopediatria.nombre_completo }}</h5>
+                                                  <a href="detalle_academico?detalle={{odontopediatria.id}}"><img width="270" height="270" src="{{ odontopediatria.foto.url }}" alt=""/></a>
+                                                  <div class="thumbnail-desc" style="padding: 10px; text-align:center">
+                                                    <h6 class="thumbnail-josip-title text-bold text-white" style="margin: 0px;">{{ odontopediatria.nombres }}</h6>
+                                                    <h6 class="thumbnail-josip-title text-bold text-white" style="margin: 0px;">{{ odontopediatria.apellido_paterno }}</h6>
                                                   </div>
                                                   <figcaption>
-                                                      <a href="#" class="btn btn-block btn-rect text-md-left btn-java">Perfil completo</a>
+                                                      <a href="detalle_academico?detalle={{odontopediatria.id}}" class="btn btn-block btn-rect text-md-left btn-java" style="text-align:center">Perfil completo</a>
                                                   </figcaption>
                                               </figure>
                                           </div>
