--- a/web/templates/navegation.html
+++ b/web/templates/navegation.html
@@ -18,7 +18,7 @@
                     <address class="contact-info reveal-sm-inline-block text-left">
                         <div class="p unit unit-horizontal unit-spacing-xs">
                             <div class="unit-left"><span class="icon icon-xs icon-circle icon-gray-light mdi mdi-map-marker text-java"></span></div>
-                            <div class="unit-body"><a href="#" class="text-gray-darker">Avenida Juan Cisternas 2283<br/>La Serena</a></div>
+                            <div class="unit-body"><a href="#" class="text-gray-darker">Avenida Juan Cisternas 1015<br/>La Serena</a></div>
                         </div>
                     </address>
                 </div>
@@ -54,14 +54,14 @@
                                     <li><a href="#"><span class="text-middle">Servicios</span></a>
                                         <ul class="rd-navbar-dropdown2">
                                             <li><a href="/clinica/servicios/odontologia"><span class="text-middle">Odontología</span></a></li>
-                                            <li><a href="/clinica/servicios/imagenologia"><span class="text-middle">Imagenología</span></a></li>                       
+                                            <li><a href="/clinica/servicios/imagenologia"><span class="text-middle">Imagenología</span></a></li>
                                         </ul>
                                     </li>
                                     <li><a href="/clinica/equipo"><span class="text-middle">Equipo</span></a></li>
-                                    <!--<li><a href="/clinica/catedra"><span class="text-middle">Cátedras</span></a></li> --> 
-                                    <li><a href="/clinica/galeria"><span class="text-middle">Galeria Fotos</span></a></li>
-                                    <li><a href="/clinica/faq"><span class="text-middle">Preguntas Frecuentes</span></a></li>                                                 
-                                </ul>  
+                                    <!--<li><a href="/clinica/catedra"><span class="text-middle">Cátedras</span></a></li> -->
+                                    <li><a href="/clinica/galeria"><span class="text-middle">Galería Fotos</span></a></li>
+                                    <li><a href="/clinica/faq"><span class="text-middle">Preguntas Frecuentes</span></a></li>
+                                </ul>
                             </li>
                             <li class="{% active_menu '^(/carrera/)(co)([a-z]+)' %}"><a href="/carrera/contacto"><span>Contacto</span></a></li>
                         </ul>
