Se modifica el index de carrera para mostrar noticias arriba

--- a/template/site/index.html
+++ b/template/site/index.html
@@ -164,7 +164,6 @@
         </header>
         <!-- Page Contents-->
         <main class="page-content">
-            <!-- What makes us different-->
             <!--What makes us different-->
             <section class="section-98 section-sm-110">
                 <div class="shell">
@@ -187,6 +186,85 @@
                             <p>Énfasis en las ciencias biomédicas básicas, técnicas y clínicas para entender las condiciones normales y patologías</p>
                         </div>
                     </div>
+                </div>
+            </section>
+            <!-- What makes us different-->
+            <section class="section-98 section-sm-110">
+                <div class="shell">
+                    <h3>Eventos importantes</h3>
+                    <hr class="divider divider-lg bg-primary">
+                    <section class="cd-horizontal-timeline">
+                        <div class="timeline">
+                            <div class="events-wrapper">
+                                <div class="events">
+                                    <ol>
+                                        <li><a href="#0" data-date="16/01/2014" class="selected">16 Jan</a></li>
+                                        <li><a href="#0" data-date="17/02/2014">17 Jan</a></li>
+                                        <li><a href="#0" data-date="20/04/2014">20 Mar</a></li>
+                                        <li><a href="#0" data-date="20/05/2014">20 May</a></li>
+                                        <li><a href="#0" data-date="09/07/2014">09 Jul</a></li>
+                                        <li><a href="#0" data-date="30/08/2014">30 Aug</a></li>
+                                    </ol>
+                                    <span class="filling-line" aria-hidden="true"></span>
+                                </div>
+                                <!-- .events -->
+                            </div>
+                            <!-- .events-wrapper -->
+                            <ul class="cd-timeline-navigation">
+                                <li><a href="#0" class="prev inactive">Prev</a></li>
+                                <li><a href="#0" class="next">Next</a></li>
+                            </ul>
+                            <!-- .cd-timeline-navigation -->
+                        </div>
+                        <!-- .timeline -->
+                        <div class="events-content">
+                            <ol>
+                                <li data-date="16/01/2014" class="selected">
+                                    <h4>Horizontal Timeline</h4>
+                                    <em>January 16th 8Hr, 2014</em>
+                                    <p>
+                                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum praesentium officia, fugit recusandae ipsa, quia velit nulla adipisci? Consequuntur aspernatur at, eaque hic repellendus sit dicta consequatur quae, ut harum ipsam molestias maxime non nisi reiciendis eligendi! Doloremque quia pariatur harum ea amet quibusdam quisquam, quae, temporibus dolores porro doloribus.
+                                    </p>
+                                </li>
+                                <li data-date="17/02/2014">
+                                    <h4>Event title here</h4>
+                                    <em>January 16th 9Hr, 2014</em>
+                                    <p>
+                                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum praesentium officia, fugit recusandae ipsa, quia velit nulla adipisci? Consequuntur aspernatur at, eaque hic repellendus sit dicta consequatur quae, ut harum ipsam molestias maxime non nisi reiciendis eligendi! Doloremque quia pariatur harum ea amet quibusdam quisquam, quae, temporibus dolores porro doloribus.
+                                    </p>
+                                </li>
+                                <li data-date="20/04/2014">
+                                    <h4>Event title here</h4>
+                                    <em>March 20th 8Hr, 2014</em>
+                                    <p>
+                                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum praesentium officia, fugit recusandae ipsa, quia velit nulla adipisci? Consequuntur aspernatur at, eaque hic repellendus sit dicta consequatur quae, ut harum ipsam molestias maxime non nisi reiciendis eligendi! Doloremque quia pariatur harum ea amet quibusdam quisquam, quae, temporibus dolores porro doloribus.
+                                    </p>
+                                </li>
+                                <li data-date="20/05/2014">
+                                    <h4>Event title here</h4>
+                                    <em>May 20th 8Hr, 2014</em>
+                                    <p>
+                                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum praesentium officia, fugit recusandae ipsa, quia velit nulla adipisci? Consequuntur aspernatur at, eaque hic repellendus sit dicta consequatur quae, ut harum ipsam molestias maxime non nisi reiciendis eligendi! Doloremque quia pariatur harum ea amet quibusdam quisquam, quae, temporibus dolores porro doloribus.
+                                    </p>
+                                </li>
+                                <li data-date="09/07/2014">
+                                    <h4>Event title here</h4>
+                                    <em>July 9th 8Hr, 2014</em>
+                                    <p>
+                                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum praesentium officia, fugit recusandae ipsa, quia velit nulla adipisci? Consequuntur aspernatur at, eaque hic repellendus sit dicta consequatur quae, ut harum ipsam molestias maxime non nisi reiciendis eligendi! Doloremque quia pariatur harum ea amet quibusdam quisquam, quae, temporibus dolores porro doloribus.
+                                    </p>
+                                </li>
+                                <li data-date="30/08/2014">
+                                    <h4>Event title here</h4>
+                                    <em>August 30th 8Hr, 2014</em>
+                                    <p>
+                                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum praesentium officia, fugit recusandae ipsa, quia velit nulla adipisci? Consequuntur aspernatur at, eaque hic repellendus sit dicta consequatur quae, ut harum ipsam molestias maxime non nisi reiciendis eligendi! Doloremque quia pariatur harum ea amet quibusdam quisquam, quae, temporibus dolores porro doloribus.
+                                    </p>
+                                </li>
+                            </ol>
+                        </div>
+                        <!-- .events-content -->
+                    </section>
                 </div>
             </section>
             <!-- Call to action-->
@@ -462,6 +540,7 @@
     <!-- Java script-->
     <script src="js/core.min.js"></script>
     <script src="js/script.js"></script>
+    <script src="js/timeline.js"></script>
 </body>
 
 </html>
