--- a/web/templates/carrera/index.html
+++ b/web/templates/carrera/index.html
@@ -38,5 +38,29 @@
         </div>
     </div>
 </section>
+<!--What makes us different-->
+<section class="section-98 section-sm-110">
+    <div class="shell">
+        <h3>Marcamos la diferencia</h3>
+        <hr class="divider divider-lg bg-primary">
+        <div class="range offset-top-60">
+            <div class="cell-md-4">
+                <div class="icon icon-xlg icon-rect icon-default icon-tecnologia-xl"></div>
+                <h5 class="text-bold text-primary">Ciencia, humanidad y tecnología</h5>
+                <p>La carrera de Odontología tiene una fuerte formación científica, humanista y tecnológica.</p>
+            </div>
+            <div class="cell-md-4 offset-top-50 offset-md-top-0">
+                <div class="icon icon-xlg icon-rect icon-default icon-compromiso-xl"></div>
+                <h5 class="text-bold text-primary">Responsabilidad social</h5>
+                <p>Sólidos principios éticos y responsabilidad social.</p>
+            </div>
+            <div class="cell-md-4 offset-top-50 offset-md-top-0">
+                <div class="icon icon-xlg icon-rect icon-default icon-biomedicina-xl"></div>
+                <h5 class="text-bold text-primary">Ciencias biomédicas</h5>
+                <p>Énfasis en las ciencias biomédicas básicas, técnicas y clínicas para entender las condiciones normales y patologías.</p>
+            </div>
+        </div>
+    </div>
+</section>
 {% endblock %}
 
