Se actualiza telefono contactos en el header

--- a/web/templates/navegation.html
+++ b/web/templates/navegation.html
@@ -8,7 +8,10 @@
                     <address class="contact-info reveal-sm-inline-block text-left offset-none">
                         <div class="p unit unit-spacing-xs unit-horizontal">
                             <div class="unit-left"><span class="icon icon-xs icon-circle icon-gray-light mdi mdi-phone text-java"></span></div>
-                            <div class="unit-body"><a href="callto:#" class="text-gray-darker">51 2 334658</a></div>
+                            <div class="unit-body">
+                              <a href="/carrera/contacto/" class="text-gray-darker">+56 51 2334660</a><br/>
+                              <a href="/carrera/contacto/" class="text-gray-darker">clinicaodontologia@userena.cl</a>
+                            </div>
                         </div>
                     </address>
                 </div>
@@ -18,7 +21,7 @@
                     <address class="contact-info reveal-sm-inline-block text-left">
                         <div class="p unit unit-horizontal unit-spacing-xs">
                             <div class="unit-left"><span class="icon icon-xs icon-circle icon-gray-light mdi mdi-map-marker text-java"></span></div>
-                            <div class="unit-body"><a href="#" class="text-gray-darker">Avenida Juan Cisternas 1015<br/>La Serena</a></div>
+                            <div class="unit-body"><a href="/carrera/contacto/#ubicacion" class="text-gray-darker">Avenida Juan Cisternas 1015<br/>La Serena</a></div>
                         </div>
                     </address>
                 </div>
