--- a/web/templates/carrera/contacto.html
+++ b/web/templates/carrera/contacto.html
@@ -176,7 +176,7 @@
         </div>
         <div class="offset-top-50">
             <!-- RD Google Map-->
-            <div class="rd-google-map">
+            <div id="ubicacion" class="rd-google-map">
                 <div id="rd-google-map" data-zoom="17" data-x="-71.2441861" data-y="-29.9098923" data-styles='[{"featureType":"administrative","elementType":"labels.text.fill","stylers":[{"color":"#444444"}]},{"featureType":"landscape","elementType":"all","stylers":[{"color":"#f2f2f2"}]},{"featureType":"poi","elementType":"all","stylers":[{"visibility":"off"}]},{"featureType":"poi.business","elementType":"geometry.fill","stylers":[{"visibility":"on"}]},{"featureType":"road","elementType":"all","stylers":[{"saturation":-100},{"lightness":45}]},{"featureType":"road.highway","elementType":"all","stylers":[{"visibility":"simplified"}]},{"featureType":"road.arterial","elementType":"labels.icon","stylers":[{"visibility":"off"}]},{"featureType":"transit","elementType":"all","stylers":[{"visibility":"off"}]},{"featureType":"water","elementType":"all","stylers":[{"color":"#b4d4e1"},{"visibility":"on"}]}]' class="rd-google-map__model"></div>
                 <ul class="rd-google-map__locations">
                     <li data-x="-71.2430400" data-y="-29.9106342">
