--- a/web/templates/carrera/footer.html
+++ b/web/templates/carrera/footer.html
@@ -17,7 +17,7 @@
                         </ul>
                     </div>
                     <div class="cell-md-4 offset-top-55 offset-md-top-0 cell-md-push-2">
-                        <p class="text-gray">&copy; <span id="copyright-year"></span> Todos los derechos reservados. <a href="privacy.html" class="text-gray">Campus Digital</a></p>
+                        <p class="text-gray">&copy; <span id="copyright-year"></span> Todos los derechos reservados.<br><a href="privacy.html" class="text-gray">Campus Digital</a></p>
                     </div>
                 </div>
             </div>
