--- a/web/templates/carrera/index.html
+++ b/web/templates/carrera/index.html
@@ -10,31 +10,91 @@
         <h3>Ultimos Eventos</h3>
         <hr class="divider divider-lg bg-primary">
         <div class="range offset-top-60">
-            <div class="cell-md-4">
-                <div class="bg-white-liac section-30 inset-left-15 inset-right-15 inset-md-left-30 inset-md-right-30">
-                    <div id="loading1">
+            <div class="cell-md-4 evento-box">
+                <div class="section-30 inset-left-15 inset-right-15 inset-md-left-30 inset-md-right-30">
+                    <div id="loading1" class="loading">
                         <img src="{% static 'images/loading.gif' %}" width="100px" height="100px">
                         <p>Cargando...</p>
                     </div>
-                    <div id="noticia1" style="display:none"></div>
+                    <div id="noticia1" style="display:none">
+                        <div class="owl-item">
+                            <div class="quote-meta unit unit-horizontal unit-spacing-sm unit-middle">
+                                <div class="unit-left unit-item-narrow">
+                                    <img width="60" height="60" src="#" alt="" class="img-circle quote-img" />
+                                </div>
+                                <div class="unit-body unit-item-wide">
+                                    <h5 class="quote-author text-capitalize text-bold text-left">
+                                        <cite class="text-normal"></cite>
+                                    </h5>
+                                    <p class="quote-desc text-capitalize text-gray text-italic text-left"></p>
+                                </div>
+                            </div>
+                            <hr style="padding:0;margin: 5px 0 5px 0;border:1px solid #2121212b;">
+                            <blockquote class="quote quote-classic">
+                                <div class="quote-body">
+                                    <p class="h4 text-italic text-gray-dark text"></p>             
+                                </div>
+                            </blockquote>
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div class="cell-md-4">
-                <div class="bg-white-liac section-30 inset-left-15 inset-right-15 inset-md-left-30 inset-md-right-30">
-                    <div id="loading2">
+            <div class="cell-md-4 evento-box">
+                <div class="section-30 inset-left-15 inset-right-15 inset-md-left-30 inset-md-right-30">
+                    <div id="loading2" class="loading">
                         <img src="{% static 'images/loading.gif' %}" width="100px" height="100px">
                         <p>Cargando...</p>
                     </div>
-                    <div id="noticia2" style="display:none"></div>
+                    <div id="noticia2" style="display:none">
+                        <div class="owl-item">
+                            <div class="quote-meta unit unit-horizontal unit-spacing-sm unit-middle">
+                                <div class="unit-left unit-item-narrow">
+                                    <img width="60" height="60" src="#" alt="" class="img-circle quote-img" />
+                                </div>
+                                <div class="unit-body unit-item-wide">
+                                    <h5 class="quote-author text-capitalize text-bold text-left">
+                                        <cite class="text-normal"></cite>
+                                    </h5>
+                                    <p class="quote-desc text-capitalize text-gray text-italic text-left"></p>
+                                </div>
+                            </div>
+                            <hr style="padding:0;margin: 5px 0 5px 0;border:1px solid #2121212b;">
+                            <blockquote class="quote quote-classic">
+                                <div class="quote-body">
+                                    <p class="h4 text-italic text-gray-dark text"></p>             
+                                </div>
+                            </blockquote>
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div class="cell-md-4">
-                <div class="bg-white-liac section-30 inset-left-15 inset-right-15 inset-md-left-30 inset-md-right-30">
-                    <div id="loading3">
+            <div class="cell-md-4 evento-box">
+                <div class="section-30 inset-left-15 inset-right-15 inset-md-left-30 inset-md-right-30">
+                    <div id="loading3" class="loading">
                         <img src="{% static 'images/loading.gif' %}" width="100px" height="100px">
                         <p>Cargando...</p>
                     </div>
-                    <div id="noticia3" style="display:none"></div>
+                    <div id="noticia3" style="display:none">
+                        <div class="owl-item">
+                            <div class="quote-meta unit unit-horizontal unit-spacing-sm unit-middle">
+                                <div class="unit-left unit-item-narrow">
+                                    <img width="60" height="60" src="#" alt="" class="img-circle quote-img" />
+                                </div>
+                                <div class="unit-body unit-item-wide">
+                                    <h5 class="quote-author text-capitalize text-bold text-left">
+                                        <cite class="text-normal"></cite>
+                                    </h5>
+                                    <p class="quote-desc text-capitalize text-gray text-italic text-left"></p>
+                                </div>
+                            </div>
+                            <hr style="padding:0;margin: 5px 0 5px 0;border:1px solid #2121212b;">
+                            <blockquote class="quote quote-classic">
+                                <div class="quote-body">
+                                    <p class="h4 text-italic text-gray-dark text"></p>             
+                                </div>
+                            </blockquote>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -59,14 +119,20 @@
             dataType: 'json',
             success: function(response, request) {
                 //noticia1
-                $("<h6 />", { text: response.tweet0['created_at'] }).appendTo("#noticia1");
-                $("<p />", { text: response.tweet0['full_text'] }).appendTo("#noticia1");
+                $("#noticia1 img").attr("src", response.tweet0['user_image']);
+                $("#noticia1 .unit-body h5 cite").html(response.tweet0['user_screen_name']);
+                $("#noticia1 .unit-body p").html(response.tweet0['user_created_at']);
+                $("#noticia1 .quote-body p").html(response.tweet0['full_text']);
                 //noticia2
-                $("<h6 />", { text: response.tweet1['created_at'] }).appendTo("#noticia2");
-                $("<p />", { text: response.tweet1['full_text'] }).appendTo("#noticia2");
+                $("#noticia2 img").attr("src", response.tweet1['user_image']);
+                $("#noticia2 .unit-body h5 cite").html(response.tweet1['user_screen_name']);
+                $("#noticia2 .unit-body p").html(response.tweet1['user_created_at']);
+                $("#noticia2 .quote-body p").html(response.tweet1['full_text']);
                 //noticia3
-                $("<h6 />", { text: response.tweet2['created_at'] }).appendTo("#noticia3");
-                $("<p />", { text: response.tweet2['full_text'] }).appendTo("#noticia3");
+                $("#noticia3 img").attr("src", response.tweet2['user_image']);
+                $("#noticia3 .unit-body h5 cite").html(response.tweet2['user_screen_name']);
+                $("#noticia3 .unit-body p").html(response.tweet2['user_created_at']);
+                $("#noticia3 .quote-body p").html(response.tweet2['full_text']);
             }
         });
     });
